<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEBEB"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/shop_Find"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_erweima"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_erweima" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_erweima"
            android:text="@string/fragment_find_food"
            android:textColor="#353535"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/food_Find"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_yaoyiyao"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_yaoyiyao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_yaoyiyao"
            android:text="@string/fragment_find_shop"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/lostandfound_Find"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_fujin"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_fujin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_fujin"
            android:text="@string/fragment_find_lostandfound"
            android:textColor="#353535"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/secondhand_Find"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_piaoliuping"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_piaoliuping" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_piaoliuping"
            android:text="@string/fragment_find_secondhand"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>



</LinearLayout>
