<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ebebeb"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/myinfo_Me"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="18dp"
        android:clickable="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_list_item_bg"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <LinearLayout
            android:id="@+id/ll_name_Me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_name_Me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="黄方意"
                android:textColor="#353535"
                android:textSize="16sp" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/iv_sex"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/ic_sex_male" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_stuid_Me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="16dp"
            android:text="@string/fragment_me_studentId"
            android:textColor="#AAAAAA"
            android:textSize="14sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reportcard_Me"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_reportcard_Me"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/akb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_reportcard_Me"
            android:text="@string/fragment_me_reportcard"
            android:textColor="#353535"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/classschedule_Me"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_classschedule_Me"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ake" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_classschedule_Me"
            android:text="@string/fragment_me_classschedule"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>

    <!--<RelativeLayout-->
        <!--android:id="@+id/send_Me"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:background="@drawable/btn_list_item_bg"-->
        <!--android:clickable="true"-->
        <!--android:paddingLeft="12dp" >-->

        <!--<ImageView-->
            <!--android:id="@+id/iv_send_Me"-->
            <!--android:layout_width="24dp"-->
            <!--android:layout_height="24dp"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="12dp"-->
            <!--android:src="@drawable/akd" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_toRightOf="@id/iv_send_Me"-->
            <!--android:text="@string/fragment_me_send"-->
            <!--android:textColor="#353535"-->
            <!--android:textSize="16sp" />-->
    <!--</RelativeLayout>-->

    <RelativeLayout
        android:id="@+id/sendmessage_Find"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_sendmessage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/find_fujin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_sendmessage"
            android:text="发送通知"
            android:textColor="#353535"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="12dp"
            android:background="#dadada" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/quit_Me"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/btn_list_item_bg"
        android:clickable="true"
        android:paddingLeft="12dp" >

        <ImageView
            android:id="@+id/iv_quit_Me"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="12dp"
            android:src="@drawable/akf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@id/iv_quit_Me"
            android:text="@string/fragment_me_quit"
            android:textColor="#353535"
            android:textSize="16sp" />
    </RelativeLayout>
</LinearLayout>
